Fix: Add z-index: 1 on arrow, so that it won't hide behind the JokeCard

--- a/prosjekt1/src/components/SlideShow/Slideshow.css
+++ b/prosjekt1/src/components/SlideShow/Slideshow.css
@@ -66,6 +66,8 @@
   color: white;
   cursor: pointer;
   transition: color 0.3s ease;
+  user-select: none;
+  z-index: 1;
 }
 
 .arrow:hover {
